--- a/index.html
+++ b/index.html
@@ -1,179 +1,182 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Control Inteligente de Pérdidas</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    * { box-sizing: border-box; font-family: Arial, Helvetica, sans-serif; }
-    body { margin:0; background:#0f172a; color:#e5e7eb; }
-    header { padding:16px 24px; background:#020617; border-bottom:1px solid #1e293b; }
-    header h1 { margin:0; font-size:22px; }
-    main { padding:20px; display:flex; flex-direction:column; gap:16px; }
+<meta charset="UTF-8" />
+<title>Control Inteligente de Pérdidas</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    .controls, .summary {
-      display:flex; gap:12px; flex-wrap:wrap; align-items:center;
-    }
+<style>
+*{box-sizing:border-box;font-family:Arial,Helvetica,sans-serif}
+body{margin:0;background:#0f172a;color:#e5e7eb}
+header{padding:16px 24px;background:#020617;border-bottom:1px solid #1e293b}
+header h1{margin:0;font-size:22px}
 
-    select, button {
-      padding:10px; background:#020617; color:#e5e7eb;
-      border:1px solid #334155; border-radius:6px;
-    }
-    button { cursor:pointer; }
-    button:hover { background:#1e293b; }
+main{padding:20px;display:flex;flex-direction:column;gap:16px}
 
-    .card {
-      padding:14px; border-radius:8px; min-width:180px;
-      background:#020617; border:1px solid #1e293b;
-    }
-    .red { border-left:6px solid #dc2626; }
-    .yellow { border-left:6px solid #f59e0b; }
+.controls{display:flex;gap:12px;flex-wrap:wrap}
+select,button{
+  padding:10px;background:#020617;color:#e5e7eb;
+  border:1px solid #334155;border-radius:6px
+}
+button{cursor:pointer}
+button:hover{background:#1e293b}
 
-    .list { display:flex; flex-direction:column; gap:10px; }
-    .item {
-      padding:12px; border-radius:8px;
-      background:#020617; border:1px solid #1e293b;
-    }
+.section{
+  background:#020617;
+  border-radius:12px;
+  padding:16px;
+}
+.section.red{border-left:6px solid #dc2626}
+.section.yellow{border-left:6px solid #f59e0b}
 
-    footer {
-      padding:10px; text-align:center;
-      font-size:12px; color:#64748b;
-      border-top:1px solid #1e293b;
-    }
-  </style>
+.section-title{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-bottom:12px;
+  font-weight:bold;
+  font-size:16px;
+}
+
+.totales{
+  font-size:13px;
+  color:#cbd5f5;
+}
+
+.item{
+  background:#020617;
+  border:1px solid #1e293b;
+  border-radius:10px;
+  padding:12px;
+  margin-bottom:8px;
+}
+
+.item.red{box-shadow:0 0 0 1px #dc2626 inset}
+.item.yellow{box-shadow:0 0 0 1px #f59e0b inset}
+
+footer{
+  padding:10px;
+  text-align:center;
+  font-size:12px;
+  color:#64748b;
+  border-top:1px solid #1e293b
+}
+</style>
 </head>
 
 <body>
 <header>
-  <h1>Control Inteligente de Pérdidas</h1>
+<h1>Control Inteligente de Pérdidas – RAG & Donaciones</h1>
 </header>
 
 <main>
 
-  <!-- CONTROLES -->
-  <div class="controls">
-    <select id="dias">
-      <option value="7">7 días</option>
-      <option value="14">14 días</option>
-      <option value="30">30 días</option>
-      <option value="60">60 días</option>
-      <option value="90">90 días</option>
-      <option value="180">180 días</option>
-    </select>
+<div class="controls">
+  <select id="dias">
+    <option value="7">7 días</option>
+    <option value="14">14 días</option>
+    <option value="30">30 días</option>
+    <option value="60">60 días</option>
+  </select>
 
-    <select id="sectorToggle" onchange="toggleSector()">
-      <option value="ALL">Toda la sucursal</option>
-      <option value="ONE">Un sector</option>
-    </select>
+  <select id="sectorToggle" onchange="toggleSector()">
+    <option value="ALL">Toda la sucursal</option>
+    <option value="ONE">Un sector</option>
+  </select>
 
-    <select id="sector" disabled>
-      <option value="">Seleccionar sector</option>
-      <option>CARNICERIA</option>
-      <option>VERDULERIA</option>
-      <option>LACTEOS</option>
-      <option>FIAMBRES</option>
-      <option>CONGELADOS</option>
-      <option>PANADERIA</option>
-      <option>ALMACEN</option>
-      <option>BEBIDAS</option>
-      <option>LIMPIEZA</option>
-      <option>PERFUMERIA</option>
-      <option>NO COMESTIBLES</option>
-      <option>TEXTIL</option>
-    </select>
+  <select id="sector" disabled>
+    <option value="">Seleccionar sector</option>
+    <option>CARNICERIA</option>
+    <option>VERDULERIA</option>
+    <option>FIAMBRES Y LACTEOS</option>
+    <option>ALMACEN</option>
+  </select>
 
-    <button onclick="cargarReporte()">Generar reporte</button>
-    <button onclick="exportarCSV()">Exportar CSV</button>
-  </div>
+  <button onclick="generar()">Generar reporte</button>
+  <button onclick="exportarCSV()">Exportar CSV</button>
+</div>
 
-  <!-- RESUMEN -->
-  <div class="summary">
-    <div class="card red" id="cntAlertas">🔴 Alertas: 0</div>
-    <div class="card yellow" id="cntAdvert">🟡 Advertencias: 0</div>
-    <div class="card" id="histMensual">📅 Histórico: —</div>
-  </div>
-
-  <!-- LISTADO -->
-  <div class="list" id="listado"></div>
+<div id="contenedor"></div>
 
 </main>
 
-<footer>
-  Control inteligente · Datos en tiempo real
-</footer>
+<footer>Control inteligente · Datos en tiempo real</footer>
 
 <script>
-const URL_API = "https://script.google.com/macros/s/AKfycbzZF1QIb9axK7iHoRYHTqM3uX7JuYpjJKyOuPF5F0RJnuCtPeQDwD2xeVxZBONYTy5dxg/exec";
+const API_URL = "https://script.google.com/macros/s/AKfycbzZF1QIb9axK7iHoRYHTqM3uX7JuYpjJKyOuPF5F0RJnuCtPeQDwD2xeVxZBONYTy5dxg/exec";
+let cache=[];
 
-let ultimoReporte = [];
-
-function toggleSector() {
+function toggleSector(){
   document.getElementById("sector").disabled =
     document.getElementById("sectorToggle").value !== "ONE";
 }
 
-async function cargarReporte() {
+async function generar(){
   const dias = document.getElementById("dias").value;
   const toggle = document.getElementById("sectorToggle").value;
   const sectorSel = document.getElementById("sector").value;
-  const sector = (toggle === "ONE" && sectorSel) ? sectorSel : "ALL";
+  const sector = toggle==="ONE" && sectorSel ? sectorSel : "ALL";
 
-  const res = await fetch(`${URL_API}?dias=${dias}&sector=${sector}`);
+  const res = await fetch(`${API_URL}?dias=${dias}&sector=${sector}`);
   const data = await res.json();
 
-  document.getElementById("cntAlertas").innerText =
-    `🔴 Alertas: ${data.resumen.total_alertas}`;
-  document.getElementById("cntAdvert").innerText =
-    `🟡 Advertencias: ${data.resumen.total_advertencias}`;
+  cache=[...data.alertas.map(x=>({...x,nivel:"ALERTA"})),
+         ...data.advertencias.map(x=>({...x,nivel:"ADVERTENCIA"}))];
 
-  // HISTÓRICO SIMPLE
-  document.getElementById("histMensual").innerText =
-    `📅 Últimos ${dias} días`;
+  const box=document.getElementById("contenedor");
+  box.innerHTML="";
 
-  // ORDENAR POR IMPACTO (alertas primero, luego advertencias)
-  ultimoReporte = [
-    ...data.alertas.map(x => ({...x, nivel:"ALERTA"})),
-    ...data.advertencias.map(x => ({...x, nivel:"ADVERTENCIA"}))
-  ];
-
-  const box = document.getElementById("listado");
-  box.innerHTML = "";
-
-  ultimoReporte.forEach(i => {
-    box.innerHTML += `
-      <div class="item ${i.nivel === "ALERTA" ? "red" : "yellow"}">
-        <strong>${i.producto}</strong> (${i.sku})<br/>
-        ${i.nivel} · ${i.motivo}<br/>
-        Evento máx: ${i.cantidad_evento_max} ${i.unidad}<br/>
-        Acumulado: ${i.cantidad_acumulada_periodo}
-      </div>`;
-  });
+  if(data.alertas.length){
+    box.innerHTML+=renderBloque("🔴 ALERTAS","red",data.alertas);
+  }
+  if(data.advertencias.length){
+    box.innerHTML+=renderBloque("🟡 ADVERTENCIAS","yellow",data.advertencias);
+  }
+  if(!data.alertas.length && !data.advertencias.length){
+    box.innerHTML=`<div class="section">✔ Sin alertas ni advertencias</div>`;
+  }
 }
 
-function exportarCSV() {
-  if (!ultimoReporte.length) {
-    alert("No hay datos para exportar");
-    return;
-  }
+function renderBloque(titulo,color,items){
+  items.sort((a,b)=>b.cantidad_acumulada_periodo-a.cantidad_acumulada_periodo);
 
-  const headers = [
-    "SKU","Producto","Nivel","Motivo",
-    "Unidad","Evento_max","Acumulado"
-  ];
+  let totalKg=0,totalUn=0;
+  items.forEach(i=>{
+    if(i.unidad==="kg") totalKg+=i.cantidad_acumulada_periodo;
+    else totalUn+=i.cantidad_acumulada_periodo;
+  });
 
-  const rows = ultimoReporte.map(i => [
-    i.sku, i.producto, i.nivel, i.motivo,
-    i.unidad, i.cantidad_evento_max, i.cantidad_acumulada_periodo
-  ]);
+  let html=`<div class="section ${color}">
+    <div class="section-title">
+      <span>${titulo}</span>
+      <span class="totales">Total: ${totalKg} kg · ${totalUn} un</span>
+    </div>`;
 
-  let csv = headers.join(",") + "\n";
-  rows.forEach(r => csv += r.join(",") + "\n");
+  items.forEach(i=>{
+    html+=`
+      <div class="item ${color}">
+        <strong>${i.producto}</strong> (${i.sku})<br/>
+        ${i.motivo}<br/>
+        Evento máx: ${i.cantidad_evento_max} ${i.unidad}<br/>
+        Acumulado período: ${i.cantidad_acumulada_periodo}
+      </div>`;
+  });
 
-  const blob = new Blob([csv], { type: "text/csv;charset=utf-8;" });
-  const link = document.createElement("a");
-  link.href = URL.createObjectURL(blob);
-  link.download = "reporte_perdidas.csv";
-  link.click();
+  html+="</div>";
+  return html;
+}
+
+function exportarCSV(){
+  if(!cache.length){alert("No hay datos");return;}
+  let csv="SKU,Producto,Nivel,EventoMax,Acumulado\n";
+  cache.forEach(i=>{
+    csv+=`${i.sku},${i.producto},${i.nivel},${i.cantidad_evento_max},${i.cantidad_acumulada_periodo}\n`;
+  });
+  const blob=new Blob([csv],{type:"text/csv"});
+  const a=document.createElement("a");
+  a.href=URL.createObjectURL(blob);
+  a.download="reporte_perdidas.csv";
+  a.click();
 }
 </script>
 
