--- a/index.html
+++ b/index.html
@@ -1,182 +1,101 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <title>Control Inteligente de Pérdidas</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-*{box-sizing:border-box;font-family:Arial,Helvetica,sans-serif}
-body{margin:0;background:#0f172a;color:#e5e7eb}
-header{padding:16px 24px;background:#020617;border-bottom:1px solid #1e293b}
-header h1{margin:0;font-size:22px}
-
-main{padding:20px;display:flex;flex-direction:column;gap:16px}
-
-.controls{display:flex;gap:12px;flex-wrap:wrap}
-select,button{
-  padding:10px;background:#020617;color:#e5e7eb;
-  border:1px solid #334155;border-radius:6px
-}
-button{cursor:pointer}
-button:hover{background:#1e293b}
-
-.section{
-  background:#020617;
-  border-radius:12px;
-  padding:16px;
-}
-.section.red{border-left:6px solid #dc2626}
-.section.yellow{border-left:6px solid #f59e0b}
-
-.section-title{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  margin-bottom:12px;
-  font-weight:bold;
-  font-size:16px;
-}
-
-.totales{
-  font-size:13px;
-  color:#cbd5f5;
-}
-
-.item{
-  background:#020617;
-  border:1px solid #1e293b;
-  border-radius:10px;
-  padding:12px;
-  margin-bottom:8px;
-}
-
-.item.red{box-shadow:0 0 0 1px #dc2626 inset}
-.item.yellow{box-shadow:0 0 0 1px #f59e0b inset}
-
-footer{
-  padding:10px;
-  text-align:center;
-  font-size:12px;
-  color:#64748b;
-  border-top:1px solid #1e293b
-}
+body{margin:0;background:#0f172a;color:#e5e7eb;font-family:Arial}
+header{padding:16px;background:#020617;border-bottom:1px solid #1e293b}
+main{padding:16px;display:flex;flex-direction:column;gap:16px}
+select,button{padding:10px;background:#020617;color:#e5e7eb;border:1px solid #334155;border-radius:6px}
+.section{background:#020617;border-radius:10px;padding:14px}
+.alerta{border-left:6px solid #dc2626}
+.advertencia{border-left:6px solid #facc15}
+.card{border:1px solid #334155;border-radius:8px;padding:10px;margin-top:8px}
+h3{margin:0 0 8px}
+small{color:#94a3b8}
 </style>
 </head>
-
 <body>
+
 <header>
-<h1>Control Inteligente de Pérdidas – RAG & Donaciones</h1>
+<h2>Control Inteligente de Pérdidas – RAG & Donaciones</h2>
 </header>
 
 <main>
 
-<div class="controls">
-  <select id="dias">
-    <option value="7">7 días</option>
-    <option value="14">14 días</option>
-    <option value="30">30 días</option>
-    <option value="60">60 días</option>
-  </select>
+<div>
+<select id="dias">
+<option value="7">7 días</option>
+<option value="14">14 días</option>
+<option value="30">30 días</option>
+</select>
 
-  <select id="sectorToggle" onchange="toggleSector()">
-    <option value="ALL">Toda la sucursal</option>
-    <option value="ONE">Un sector</option>
-  </select>
+<select id="sector">
+<option value="ALL">Toda la sucursal</option>
+<option>CARNICERIA</option>
+<option>VERDULERIA</option>
+<option>FIAMBRES Y LACTEOS</option>
+</select>
 
-  <select id="sector" disabled>
-    <option value="">Seleccionar sector</option>
-    <option>CARNICERIA</option>
-    <option>VERDULERIA</option>
-    <option>FIAMBRES Y LACTEOS</option>
-    <option>ALMACEN</option>
-  </select>
-
-  <button onclick="generar()">Generar reporte</button>
-  <button onclick="exportarCSV()">Exportar CSV</button>
+<button onclick="generar()">Generar reporte</button>
 </div>
 
-<div id="contenedor"></div>
+<div id="resultado"></div>
 
 </main>
 
-<footer>Control inteligente · Datos en tiempo real</footer>
-
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbzZF1QIb9axK7iHoRYHTqM3uX7JuYpjJKyOuPF5F0RJnuCtPeQDwD2xeVxZBONYTy5dxg/exec";
-let cache=[];
-
-function toggleSector(){
-  document.getElementById("sector").disabled =
-    document.getElementById("sectorToggle").value !== "ONE";
-}
+const URL = "PEGÁ_ACÁ_TU_URL_EXEC";
 
 async function generar(){
-  const dias = document.getElementById("dias").value;
-  const toggle = document.getElementById("sectorToggle").value;
-  const sectorSel = document.getElementById("sector").value;
-  const sector = toggle==="ONE" && sectorSel ? sectorSel : "ALL";
-
-  const res = await fetch(`${API_URL}?dias=${dias}&sector=${sector}`);
-  const data = await res.json();
-
-  cache=[...data.alertas.map(x=>({...x,nivel:"ALERTA"})),
-         ...data.advertencias.map(x=>({...x,nivel:"ADVERTENCIA"}))];
-
-  const box=document.getElementById("contenedor");
+  const dias=document.getElementById("dias").value;
+  const sector=document.getElementById("sector").value;
+  const res=await fetch(`${URL}?dias=${dias}&sector=${sector}`);
+  const data=await res.json();
+  const box=document.getElementById("resultado");
   box.innerHTML="";
 
+  box.innerHTML+=`
+  <div class="section">
+  <h3>Resumen últimos ${dias} días</h3>
+  <small>Sector: ${data.resumen.sector}</small><br>
+  Alertas: ${data.resumen.total_alertas} |
+  Advertencias: ${data.resumen.total_advertencias}
+  </div>`;
+
   if(data.alertas.length){
-    box.innerHTML+=renderBloque("🔴 ALERTAS","red",data.alertas);
+    box.innerHTML+=`<div class="section alerta"><h3>Alertas</h3></div>`;
+    data.alertas.forEach(p=>box.innerHTML+=card(p));
   }
+
   if(data.advertencias.length){
-    box.innerHTML+=renderBloque("🟡 ADVERTENCIAS","yellow",data.advertencias);
+    box.innerHTML+=`<div class="section advertencia"><h3>Advertencias</h3></div>`;
+    data.advertencias.forEach(p=>box.innerHTML+=card(p));
   }
-  if(!data.alertas.length && !data.advertencias.length){
-    box.innerHTML=`<div class="section">✔ Sin alertas ni advertencias</div>`;
+
+  if(data.ranking.length){
+    box.innerHTML+=`<div class="section"><h3>Top productos del período</h3></div>`;
+    data.ranking.forEach(p=>box.innerHTML+=card(p));
+  }
+
+  if(data.mas_frecuente){
+    box.innerHTML+=`<div class="section"><h3>Producto más frecuente</h3>${card(data.mas_frecuente)}</div>`;
+  }
+
+  if(data.mas_rag){
+    box.innerHTML+=`<div class="section"><h3>Producto más RAG</h3>${card(data.mas_rag)}</div>`;
   }
 }
 
-function renderBloque(titulo,color,items){
-  items.sort((a,b)=>b.cantidad_acumulada_periodo-a.cantidad_acumulada_periodo);
-
-  let totalKg=0,totalUn=0;
-  items.forEach(i=>{
-    if(i.unidad==="kg") totalKg+=i.cantidad_acumulada_periodo;
-    else totalUn+=i.cantidad_acumulada_periodo;
-  });
-
-  let html=`<div class="section ${color}">
-    <div class="section-title">
-      <span>${titulo}</span>
-      <span class="totales">Total: ${totalKg} kg · ${totalUn} un</span>
-    </div>`;
-
-  items.forEach(i=>{
-    html+=`
-      <div class="item ${color}">
-        <strong>${i.producto}</strong> (${i.sku})<br/>
-        ${i.motivo}<br/>
-        Evento máx: ${i.cantidad_evento_max} ${i.unidad}<br/>
-        Acumulado período: ${i.cantidad_acumulada_periodo}
-      </div>`;
-  });
-
-  html+="</div>";
-  return html;
-}
-
-function exportarCSV(){
-  if(!cache.length){alert("No hay datos");return;}
-  let csv="SKU,Producto,Nivel,EventoMax,Acumulado\n";
-  cache.forEach(i=>{
-    csv+=`${i.sku},${i.producto},${i.nivel},${i.cantidad_evento_max},${i.cantidad_acumulada_periodo}\n`;
-  });
-  const blob=new Blob([csv],{type:"text/csv"});
-  const a=document.createElement("a");
-  a.href=URL.createObjectURL(blob);
-  a.download="reporte_perdidas.csv";
-  a.click();
+function card(p){
+  return `<div class="card">
+  <strong>${p.producto}</strong> (${p.sku})<br>
+  ${p.nivel || ""} – ${p.motivo || ""}<br>
+  Evento máx: ${p.cantidad_evento_max} ${p.unidad}<br>
+  Acumulado: ${p.cantidad_acumulada_periodo}
+  </div>`;
 }
 </script>
 
