Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,103 +1,207 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Control Inteligente de Pérdidas</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body{margin:0;background:#0f172a;color:#e5e7eb;font-family:Arial}
-header{padding:16px;background:#020617;border-bottom:1px solid #1e293b}
-main{padding:16px;display:flex;flex-direction:column;gap:16px}
-select,button{padding:10px;background:#020617;color:#e5e7eb;border:1px solid #334155;border-radius:6px}
-.section{background:#020617;border-radius:10px;padding:14px}
-.alerta{border-left:6px solid #dc2626}
-.advertencia{border-left:6px solid #facc15}
-.card{border:1px solid #334155;border-radius:8px;padding:10px;margin-top:8px}
-h3{margin:0 0 8px}
-small{color:#94a3b8}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Control Inteligente de Pérdidas – RAG & Donaciones</title>
+
+  <style>
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      background: linear-gradient(180deg, #050b1a, #0b1533);
+      color: #fff;
+    }
+
+    .container {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    h1 {
+      font-size: 22px;
+      margin-bottom: 20px;
+    }
+
+    .filters {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+
+    select, button {
+      padding: 10px;
+      border-radius: 8px;
+      border: none;
+      background: #121c3d;
+      color: #fff;
+      font-size: 14px;
+    }
+
+    button {
+      cursor: pointer;
+      background: #1e88e5;
+    }
+
+    button:hover {
+      background: #1565c0;
+    }
+
+    .panel {
+      margin-top: 20px;
+      padding: 15px;
+      border-radius: 12px;
+      background: #0f1a3a;
+    }
+
+    .alertas {
+      border-left: 6px solid #e53935;
+    }
+
+    .advertencias {
+      border-left: 6px solid #fbc02d;
+    }
+
+    .item {
+      border: 1px solid rgba(255,255,255,0.15);
+      border-radius: 10px;
+      padding: 10px;
+      margin-top: 10px;
+    }
+
+    .titulo {
+      display: flex;
+      justify-content: space-between;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    .resumen-extra {
+      margin-top: 20px;
+      padding: 15px;
+      border-radius: 12px;
+      background: #0c1430;
+      font-size: 14px;
+    }
+
+    footer {
+      margin-top: 30px;
+      text-align: center;
+      font-size: 12px;
+      opacity: 0.6;
+    }
+  </style>
 </head>
+
 <body>
+  <div class="container">
+    <h1>Control Inteligente de Pérdidas – RAG & Donaciones</h1>
 
-<header>
-<h2>Control Inteligente de Pérdidas – RAG & Donaciones</h2>
-</header>
+    <div class="filters">
+      <select id="selectDias">
+        <option value="7">Últimos 7 días</option>
+        <option value="14">Últimos 14 días</option>
+        <option value="30">Últimos 30 días</option>
+      </select>
 
-<main>
+      <select id="selectSector">
+        <option value="Toda la sucursal">Toda la sucursal</option>
+        <option value="CARNICERIA">CARNICERIA</option>
+        <option value="VERDULERIA">VERDULERIA</option>
+        <option value="FIAMBRES Y LACTEOS">FIAMBRES Y LACTEOS</option>
+      </select>
 
-<div>
-<select id="dias">
-<option value="7">7 días</option>
-<option value="14">14 días</option>
-<option value="30">30 días</option>
-</select>
+      <button id="btnGenerar">Generar reporte</button>
+      <button id="btnExportar">Exportar CSV</button>
+    </div>
 
-<select id="sector">
-<option value="ALL">Toda la sucursal</option>
-<option>CARNICERIA</option>
-<option>VERDULERIA</option>
-<option>FIAMBRES Y LACTEOS</option>
-</select>
+    <div id="resultado"></div>
+    <div id="resumenExtra" class="resumen-extra"></div>
 
-<button onclick="generar()">Generar reporte</button>
-</div>
+    <footer>
+      Control inteligente · Datos en tiempo real
+    </footer>
+  </div>
 
-<div id="resultado"></div>
+  <script>
+    const API_URL = "PEGÁ_ACÁ_TU_URL_EXEC_DEL_GS";
 
-</main>
+    document.getElementById("btnGenerar").addEventListener("click", generarReporte);
+    document.getElementById("btnExportar").addEventListener("click", exportarCSV);
 
-<script>
-const URL = "PEGÁ_ACÁ_TU_URL_EXEC";
+    async function generarReporte() {
+      const dias = document.getElementById("selectDias").value;
+      const sector = document.getElementById("selectSector").value;
 
-async function generar(){
-  const dias=document.getElementById("dias").value;
-  const sector=document.getElementById("sector").value;
-  const res=await fetch(`${URL}?dias=${dias}&sector=${sector}`);
-  const data=await res.json();
-  const box=document.getElementById("resultado");
-  box.innerHTML="";
+      const url = `${API_URL}?dias=${dias}&sector=${encodeURIComponent(sector)}`;
 
-  box.innerHTML+=`
-  <div class="section">
-  <h3>Resumen últimos ${dias} días</h3>
-  <small>Sector: ${data.resumen.sector}</small><br>
-  Alertas: ${data.resumen.total_alertas} |
-  Advertencias: ${data.resumen.total_advertencias}
-  </div>`;
+      const contenedor = document.getElementById("resultado");
+      const resumenExtra = document.getElementById("resumenExtra");
 
-  if(data.alertas.length){
-    box.innerHTML+=`<div class="section alerta"><h3>Alertas</h3></div>`;
-    data.alertas.forEach(p=>box.innerHTML+=card(p));
-  }
+      contenedor.innerHTML = "Cargando reporte...";
+      resumenExtra.innerHTML = "";
 
-  if(data.advertencias.length){
-    box.innerHTML+=`<div class="section advertencia"><h3>Advertencias</h3></div>`;
-    data.advertencias.forEach(p=>box.innerHTML+=card(p));
-  }
+      try {
+        const res = await fetch(url);
+        const data = await res.json();
+        renderReporte(data);
+      } catch (err) {
+        contenedor.innerHTML = "Error al generar el reporte";
+        console.error(err);
+      }
+    }
 
-  if(data.ranking.length){
-    box.innerHTML+=`<div class="section"><h3>Top productos del período</h3></div>`;
-    data.ranking.forEach(p=>box.innerHTML+=card(p));
-  }
+    function renderReporte(data) {
+      const contenedor = document.getElementById("resultado");
+      contenedor.innerHTML = "";
 
-  if(data.mas_frecuente){
-    box.innerHTML+=`<div class="section"><h3>Producto más frecuente</h3>${card(data.mas_frecuente)}</div>`;
-  }
+      if (data.alertas.length > 0) {
+        contenedor.innerHTML += `
+          <div class="panel alertas">
+            <div class="titulo">
+              <span>🔴 ALERTAS</span>
+            </div>
+            ${data.alertas.map(a => `
+              <div class="item">
+                <b>${a.producto} (${a.sku})</b><br>
+                Evento máx: ${a.cantidad_evento_max} ${a.unidad}<br>
+                Acumulado período: ${a.cantidad_acumulada_periodo}
+              </div>
+            `).join("")}
+          </div>
+        `;
+      }
 
-  if(data.mas_rag){
-    box.innerHTML+=`<div class="section"><h3>Producto más RAG</h3>${card(data.mas_rag)}</div>`;
-  }
-}
+      if (data.advertencias.length > 0) {
+        contenedor.innerHTML += `
+          <div class="panel advertencias">
+            <div class="titulo">
+              <span>🟡 ADVERTENCIAS</span>
+            </div>
+            ${data.advertencias.map(a => `
+              <div class="item">
+                <b>${a.producto} (${a.sku})</b><br>
+                Evento máx: ${a.cantidad_evento_max} ${a.unidad}<br>
+                Acumulado período: ${a.cantidad_acumulada_periodo}
+              </div>
+            `).join("")}
+          </div>
+        `;
+      }
 
-function card(p){
-  return `<div class="card">
-  <strong>${p.producto}</strong> (${p.sku})<br>
-  ${p.nivel || ""} – ${p.motivo || ""}<br>
-  Evento máx: ${p.cantidad_evento_max} ${p.unidad}<br>
-  Acumulado: ${p.cantidad_acumulada_periodo}
-  </div>`;
-}
-</script>
+      document.getElementById("resumenExtra").innerHTML = `
+        <b>Resumen del período</b><br>
+        Producto más recurrente: ${data.top_producto || "N/D"}<br>
+        Sector más afectado: ${data.top_sector || "N/D"}<br>
+        Total de eventos: ${data.total_eventos || 0}
+      `;
+    }
 
+    function exportarCSV() {
+      alert("Exportación CSV pendiente (backend ya preparado)");
+    }
+  </script>
 </body>
 </html>
